--- a/styles/Commons.module.css
+++ b/styles/Commons.module.css
@@ -67,12 +67,29 @@
 .rightPanel__headerRight li {
      margin-right: 20px;
      cursor: pointer;
+     text-transform: capitalize;
 }
-
+.rightPanel__headerRight li a {
+    color: #000;
+}
 .jobsListings {
     padding: 10px;
 }
 
+
 .filterItem {
     cursor: pointer;
+}
+.dropdownFirstOption {
+    text-transform: capitalize;
+}
+.expandIcon {
+    border-radius: 7px;
+    background: #bdbdbd;
+    width: 25px;
+    height: 25px;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
 }
