--- a/styles/override.css
+++ b/styles/override.css
@@ -7,8 +7,17 @@
 }
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
     position: relative;
-    padding: 10px 50px;
+    padding: 12px 50px;
 }
 .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow {
-    top: 8px !important;
+    top: 10px !important;
+    left: 11px;
+}
+.ant-collapse-content > .ant-collapse-content-box {
+    padding: 0;
+}
+
+.ant-collapse > .ant-collapse-item.ant-collapse-no-arrow > .ant-collapse-header {
+    padding-left: 12px;
+    border-bottom: 1px solid #efefef;
 }
