--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  background-color: #f5f5f5;
+  font-family: 'Poppins', sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
