--- a/styles/Commons.module.css
+++ b/styles/Commons.module.css
@@ -151,6 +151,8 @@
         z-index: 11;
         box-shadow: 2px 0px 5px 0 rgba(0,0,0,.2);
         background: #fff;
+        height: 100%;
+        overflow-y: auto;
         padding: 0;
         top: 74px;
         transition: transform .3s ease;
