--- a/styles/Commons.module.css
+++ b/styles/Commons.module.css
@@ -151,7 +151,7 @@
         z-index: 11;
         box-shadow: 2px 0px 5px 0 rgba(0,0,0,.2);
         background: #fff;
-        height: 100%;
+        height: calc(100% - 72px);
         overflow-y: auto;
         padding: 0;
         top: 74px;
