--- a/styles/Commons.module.css
+++ b/styles/Commons.module.css
@@ -88,6 +88,7 @@
     background: #bdbdbd;
     width: 25px;
     height: 25px;
+    padding: 4px;
     display: flex !important;
     justify-content: center;
     align-items: center;
